# ChangeLog for net-misc/tucan
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  05 Jan 2010; Fabiano Francesconi (elbryan) <fabiano.francesconi@gmail.com>
  tucan-0.3.9.ebuild, tucan-9999.ebuild:
  Reverted back to doicon, my bad

  05 Jan 2010; Fabiano Francesconi (elbryan) <fabiano.francesconi@gmail.com>
  tucan-0.3.9.ebuild, tucan-9999.ebuild:
  Reverted back to newicon

  04 Jan 2010; Fabiano Francesconi (elbryan) <fabiano.francesconi@gmail.com>
  tucan-0.3.9.ebuild:
  Added postinst ewarns

  04 Jan 2010; Fabiano Francesconi (elbryan) <fabiano.francesconi@gmail.com>
  tucan-0.3.9.ebuild, tucan-9999.ebuild:
  Fixed doicon and ebuild description, thanks to Tommy and Nathan Phillip

  04 Jan 2010; Fabiano Francesconi (elbryan) <fabiano.francesconi@gmail.com>
  tucan-0.3.9.ebuild, tucan-9999.ebuild:
  Fixed issue with newicon. Updated license.

  03 Jan 2010; Fabiano Francesconi (elbryan) <fabiano.francesconi@gmail.com>
  +tucan-9999.ebuild:
  Added tucan live-ebuild

  03 Jan 2010; Fabiano Francesconi (elbryan) <fabiano.francesconi@gmail.com>
  tucan-0.3.9.ebuild:
  Fixed description and header.

  03 Jan 2010; Fabiano Francesconi (elbryan) <fabiano.francesconi@gmail.com>
  +tucan-0.3.9.ebuild, +metadata.xml:
  New Ebuild for bug 261907
