@@ -1,6 +1,5 @@
 DIST tucan-0.3.9.tar.gz 338109 RMD160 9f2cbafb3c74435c027cd21b90913d8c16eff23d SHA1 c2aa4447a6a802c975b218815648536814ea2ae4 SHA256 ec1cb4f28b444af36389be5f5080774f2bd90ef55d3a9a3b748cbe16eef1cab5
-DIST tucan-9999.tar.gz 338109 RMD160 9f2cbafb3c74435c027cd21b90913d8c16eff23d SHA1 c2aa4447a6a802c975b218815648536814ea2ae4 SHA256 ec1cb4f28b444af36389be5f5080774f2bd90ef55d3a9a3b748cbe16eef1cab5
-EBUILD tucan-0.3.9.ebuild 1062 RMD160 b32f45f0e43a675388b9e3e65c0a248f590ab2f6 SHA1 3453c9dde042dca2fbecec2f767a798d9bdfce75 SHA256 c183396e6de35773536b783ec73e66ad907c2363b623ab77b389830d2fdf027c
-EBUILD tucan-9999.ebuild 892 RMD160 ecca7c4318861dd6e3b33a1595017821887a1e59 SHA1 30a782e02412211bb685e43644441f4946c3db41 SHA256 33861598b524e8ac933261005f9fa4d051d12d69471792191ff20e1ea446f5e2
-MISC ChangeLog 1297 RMD160 64e95a57637d1822d6b9248e347f2e9f849d41bb SHA1 1c09e9120cc61c88009ac273384147afa95b7fa4 SHA256 0986853e0ec8a06b0bd083175fccbd75a33a1dc57b13d58c5fd4f27bb597d9bd
+EBUILD tucan-0.3.9.ebuild 1058 RMD160 51fc282e1b763c5f0d2ab33c7b2552970b3a1046 SHA1 2de32363d2c1a79c4444493832fc1ed9c78a0605 SHA256 1891618570c18c0c5792d783fe16e4024edac515755269ed4e18095be7bfd719
+EBUILD tucan-9999.ebuild 932 RMD160 f86987fa3f7bd051bcfbeab161fd48b0eb117068 SHA1 63f09262bf1d5fcc52183bd818015cc9749118fe SHA256 56eb949b9a48f7adeacf136d14f081f28792fa48f1b420c93b406591adae3de3
+MISC ChangeLog 1458 RMD160 365d68f81a6a0883a82f5f2c64a8dd2650c1ca6b SHA1 77287f9a7be72ec57cc314a6dc4b64a4ebb161c4 SHA256 5b6439da8fc86c8e3aeb59006ed4bb8e3c61f3b310a8d5b30845e67ba83d871d
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
