@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  11 Jan 2010; Fabiano Francesconi (elbryan) <fabiano.francesconi@gmail.com>
+  tucan-0.3.9.ebuild, tucan-9999.ebuild:
+  Fixed live ebuild, updated descriptions
+
   05 Jan 2010; Fabiano Francesconi (elbryan) <fabiano.francesconi@gmail.com>
   tucan-0.3.9.ebuild, tucan-9999.ebuild:
   Reverted back to doicon, my bad
